--- a/Page1.html
+++ b/Page1.html
@@ -19,121 +19,123 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<title>सत्यानुसरण - पृष्ठ 1</title>
+<title>सत्यानुसरण (1)</title>
 
 <style>
 
 body{
 
-    margin:0;
+  margin:0;
 
-    font-family:'Noto Serif Devanagari', serif;
+  background:#cfcfcf;
 
-    background: linear-gradient(to bottom, #f6e7c1, #fff9e6);
-
-    color:#222;
-
-    padding:20px;
+  font-family:"Noto Serif Devanagari", serif;
 
 }
-
-/* Page Border */
 
 .page{
 
-    border:5px solid #000;
+  width:90%;
 
-    border-radius:20px;
+  margin:20px auto;
 
-    padding:25px;
+  background:#d9d9d9;
 
-    background:#fffdf8;
+  border:6px solid #000;
 
-}
+  border-radius:25px;
 
-/* Top Title */
+  padding:50px 65px 120px 65px;
 
-.top-title{
+  position:relative;
 
-    text-align:center;
-
-    font-size:32px;
-
-    font-weight:bold;
-
-    border:3px solid #000;
-
-    display:inline-block;
-
-    padding:5px 20px;
-
-    margin:0 auto 25px auto;
+  box-sizing:border-box;
 
 }
 
-/* Content Boxes */
+.title{
 
-.box{
+  text-align:center;
 
-    border:3px solid #000;
-
-    padding:20px;
-
-    margin:25px 0;
-
-    line-height:2;
-
-    font-size:20px;
-
-    background:white;
+  margin-bottom:45px;
 
 }
 
-/* Signature */
+.title span{
 
-.sign{
+  border:3px solid #000;
 
-    text-align:right;
+  padding:6px 35px;
 
-    margin-top:15px;
+  font-size:36px;
 
-    font-weight:bold;
+  font-weight:bold;
 
 }
 
-/* Footer */
+p{
+
+  font-size:22px;
+
+  line-height:1.9;
+
+  margin:14px 0;
+
+  text-align:justify;
+
+}
+
+.author{
+
+  margin-top:25px;
+
+  font-weight:bold;
+
+}
 
 .footer{
 
-    text-align:center;
+  position:absolute;
 
-    margin-top:20px;
+  bottom:15px;
 
-    font-size:18px;
+  left:50%;
 
-    border-top:2px solid #000;
+  transform:translateX(-50%);
 
-    padding-top:8px;
+  border:3px solid #000;
+
+  padding:5px 25px;
+
+  font-size:18px;
+
+  background:#d9d9d9;
 
 }
 
 .page-number{
 
-    float:right;
+  position:absolute;
 
-    border:2px solid #000;
+  right:15px;
 
-    border-radius:50%;
+  bottom:15px;
 
-    width:28px;
+  border:3px solid #000;
 
-    height:28px;
+  width:38px;
 
-    line-height:28px;
+  height:38px;
 
-    text-align:center;
+  border-radius:50%;
 
-    font-weight:bold;
+  text-align:center;
+
+  line-height:34px;
+
+  font-weight:bold;
+
+  background:#d9d9d9;
 
 }
 
@@ -145,48 +147,28 @@ body{
 
 <div class="page">
 
-    <div style="text-align:center;">
+  <div class="title">
 
-        <div class="top-title">सत्यानुसरण</div>
+    <span>सत्यानुसरण</span>
 
-    </div>
+  </div>
 
-    <div class="box">
+  <p>अर्थ, मान, यश इत्यादि पाने की आशा में मुझे ठाकुर बनाकर भक्त मत बनो, सावधान होओ ठगे जाओगे; तुम्हारा ठाकुरत्व न जागने पर कोई तुम्हारा केन्द्र भी नहीं, ठाकुर भी नहीं- धोखा देकर धोखे में पड़ोगे ।</p>
 
-        अर्थ, मान, यश इत्यादि पाने की आशा में मुझे ठाकुर बनाकर भक्त मत बनो, सावधान होओ—ठगे जाओगे;  
+  <p class="author">श्रीश्रीठाकुर</p>
 
-        तुम्हारा ठाकुरत्व न जानने पर कोई तुम्हारा केन्द्र भी नहीं, ठाकुर भी नहीं—धोखा देकर धोखे में पड़ोगे।
+  <p>भारत की अवनति (Degeneration) तभी से आरम्भ हुई जब से भारतवासियों के लिये अमूर्त्त भगवान असीम हो उठें - ऋषियों को छोड़ कर ऋषिवाद की उपासना आरम्भ हुई। भारत ! यदि भविष्यत्-कल्याण का आह्वान करना चाहते हो, तो सम्प्रदायगत विरोध को भूल कर जगत के पूर्व-पूर्व गुरुओं के प्रति श्रद्धासम्पन्न होओ और अपने मूर्त्त एवं जीवन्त गुरु वा भगवान में आसक्त (attached) होओ, और उन्हें ही स्वीकार करो- जो उनसे प्रेम करते हैं। कारण, पूर्ववर्ती को अधिकार करके ही परवर्ती का आविर्भाव होता है।</p>
 
-        <div class="sign">— श्रीश्रीठाकुर</div>
+  <div class="footer">
 
-    </div>
+    श्रीश्रीठाकुर अनुकूलचन्द्र जी का श्रीहस्तलिखित अमृत निर्देश 
 
-    <div class="box">
+  </div>
 
-        भारत की अवनति (Degeneration) तभी से आरम्भ हुई जब से भारतवासियों के लिये अमूर्त भगवान असीम हो उठे —  
-
-        ऋषियों को छोड़ कर ऋषिवाद की उपासना आरम्भ हुई।  
-
-        भारत! यदि भविष्यत्-कल्याण का आह्वान करना चाहते हो, तो सम्प्रदायगत विरोध को भूल कर जगत के पूर्व-पूर्व गुरुओं के प्रति श्रद्धासम्पन्न होओ —  
-
-        और अपने मूर्त एवं जीवन्त गुरु वा भगवान में आसक्त (attached) होओ —  
-
-        और उन्हें ही स्वीकार करो — जो उनसे प्रेम करते हैं।  
-
-        कारण, पूर्ववर्ती को अधिकार करके ही परवर्ती का आविर्भाव होता है।
-
-    </div>
-
-    <div class="footer">
-
-        श्रीश्रीठाकुर अनुकूलचन्द्र जी का श्रीहस्तलिखित अमृत निर्देश
-
-        <div class="page-number">1</div>
-
-    </div>
+  <div class="page-number">1</div>
 
 </div>
-<p>📖📖📖📖AnukulBhajanMala📖📖📖📖</p>
+
 </body>
 
 </html>
